changed cert path

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Ejbca": {
     "BaseUrl": "https://localhost:443",
-    "SuperAdminCertPath": "/Users/vinod/Desktop/projects/leopard-app-poc/docker-containers/SuperAdmin.p12",
+    "SuperAdminCertPath": "./docker-containers/SuperAdmin.p12",
     "SuperAdminPassword": "Cyblore123!",
     "CertificateProfile": "ENDUSER",
     "EndEntityProfile": "EMPTY"
