--- a/appsettings.json
+++ b/appsettings.json
@@ -3,8 +3,8 @@
     "DefaultConnection": "Server=localhost,1433;Database=leopard_db;User Id=sa;Password=Cyblore123!;TrustServerCertificate=True"
   },
   "Ejbca": {
-    "BaseUrl": "https://3.109.138.227:443",
-    "SuperAdminCertPath": "/home/ec2-user/leopard-app-poc/docker-containers/SuperAdmin.p12",
+    "BaseUrl": "https://localhost:443",
+    "SuperAdminCertPath": "/Users/vinod/Desktop/projects/leopard-app-poc/docker-containers/SuperAdmin.p12",
     "SuperAdminPassword": "Cyblore123!",
     "CertificateProfile": "ENDUSER",
     "EndEntityProfile": "EMPTY"
