--- a/docker-containers/docker-compose.yml
+++ b/docker-containers/docker-compose.yml
@@ -31,16 +31,20 @@ services:
       - LOG_LEVEL_SERVER=INFO
       - TLS_SETUP_ENABLED=simple
       - EJBCA_CLI_INSTALL_NOHTTPS=true
-      - EJBCA_REST_API_ENABLED=true
     ports:
       - "80:8080"
       - "443:8443"
+
   mssql-server:
     container_name: mssql-server
     image: mcr.microsoft.com/mssql/server:2022-latest
+    networks:
+      - application-bridge
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=Cyblore123!
       - MSSQL_PID=Express
     ports:
       - "1433:1433"
+    volumes:
+      - ./sqldata:/var/opt/mssql
